Log current count to console in Counter component

--- a/Blazor for Front-End Development/!Test App/MyBlazorApp/Pages/Counter.razor
+++ b/Blazor for Front-End Development/!Test App/MyBlazorApp/Pages/Counter.razor
@@ -15,6 +15,7 @@
     private async Task IncrementCount()
     {
         currentCount++;
+        Console.WriteLine(currentCount);
         if (JSRuntime != null)
         {
             await JSRuntime.InvokeVoidAsync("logToConsole", $"Current count: {currentCount}");
